[package]
name = "rubrikprom"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "rubrikprom"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
